wrote some more thoughts on repair in a holistic system

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -15,7 +15,7 @@
     "**We hypothesise that** other-initiated repair and a compositional language co-evolve under the following assumptions:\n",
     "\n",
     "1. There is a pressure for communicative success\n",
-    "2. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) closed request\n",
+    "2. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) restricted request\n",
     "3. There is a pressure to make repair sequences as efficient as possible (in terms of combined utterance length of repair initiator and response)\n",
     "    \n",
     "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the meaning that you _did_ get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. _**<span class=\"mark\">Note</span>**_ that this hypothesis is thus based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that back verbatim, in order to prompt the speaker to repeat the part that didn't come through. We feel that this is a reasonable assumption based on what we know from empirical work, but it is a little hard to assess given that natural language _is_ compositional.\n",
@@ -28,7 +28,7 @@
     "\n",
     "B: \"you mean the turquoise one?\"\n",
     "\n",
-    "This is different from the type of repair request Mark D. and I had been thinking about so far for this project though; we were thinking of repair as a response to environmental noise (for now), not for the purpose of disambiguation."
+    "In this example, the issue with the holistic signal \"blue\" is not that part of it was covered by noise, but that it is (apparently) not specific enough to pick out one particular referent. So it's not quite the same as what we were thinking about above: which is the question whether one can do efficient repair (i.e. a restricted request) when given a holistic signal that was partly disturbed by noise, in such a way that the listener does not get even _part_ of the meaning. Whereas in the example above, the listener receives the full signal without noise, and therefore is able to interpret part of the meaning (i.e. exclude some potential referents, such as the red shirt), but the problem is that they cannot quite narrow it down to a single unambiguous referent."
    ]
   },
   {
