--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -66,20 +66,20 @@
    "source": [
     "### Question: How to implement the pressure for communicative success that we have in mind?\n",
     "\n",
-    "What I'm wondering here is whether the pressure for expressivity, as it was implemented by Kirby et al. (2015), in combination with a pressure for efficiency, will have the effect of a pressure for communicative success as we have in mind, or whether we'll have to incorporate an extra or different pressure for communicative success.\n",
+    "What I'm wondering here is whether the pressure for expressivity, as it was implemented by Kirby et al. (2015), in combination with a pressure for efficiency (and the possibility of repair), will have the effect of a pressure for communicative success as we have in mind, or whether we'll have to incorporate an extra or different pressure for communicative success.\n",
     "\n",
     "Firstly, the way the pressure for expressivity is implemented by Kirby et al. (2015):\n",
     "speakers try to avoid using ambiguous signals. ---> this is sufficient for pushing populations towards having either holistic or compositional languages (as opposed to degenerate ones). \n",
     "\n",
     "---> What could the effect of environmental noise be in this? If data consists of <meaning, form> pairs that were produced by a pair of agents from the previous generation, as in the Kirby et al. (2015) model, noise _without_ repair will mean that learners sometimes receive incomplete data (an incomplete form). Meanings in the <meaning, form> pairs that make up the data should not be incomplete, because (if I understand the Kirby et al., 2015, paper correctly) these represent the speaker's communicative intention, rather than the listener's interpretation.\n",
     "\n",
-    "---> What will that mean for how likely learners are to infer different languages? In general we'd just expect that learners will need more observations in order to reach a given amount of posterior belief in the correct language hypothesis. This means that given a particular bottleneck width, populations who are exposed to noise will be more likely to transition from one language into another than populations who aren't. Will the addition of noise push learners in any particular direction though? I can't think why that would happen if learners have a flat prior. However, if learners have a compression-based prior as in the Kirby et al. (2015) model, they would be pushed towards degenerate languages in general.\n",
+    "---> What will that mean for how likely learners are to infer different languages? In general we'd just expect that learners will need more observations in order to reach a given amount of posterior belief in the correct language hypothesis. This means that given a particular bottleneck width, populations who are exposed to noise will be more likely to transition from one language into another than populations who aren't. Will the addition of noise push learners in any particular direction though? I can't think why that would happen if learners have a flat prior. However, if learners have a compression-based prior as in the Kirby et al. (2015) model, they would be pushed towards degenerate languages in general, in the same way as it happens in Kirby et al.\n",
     "\n",
     "---> The pressure for communicative success that Mark D. and I had in mind is that speaker and hearer try to cooperate so that the speaker can get their intended meaning across. I think this pressure is captured if we assume that the hearer will initiate repair when they can't derive a full meaning based on the form they received. In some cases, that means a hearer will not have to initiate repair even when they received an incomplete form. That is, if the hearer is using a language of the 'other' type, in which there is only one form that starts with a 'b', and that form maps to one particular meaning, then they will be able to infer a full meaning, and will therefore not initiate repair. However, such a language will necessarily also contain some degenerate forms, such as 'aa' mapping to both meaning '02' and meaning '03'. _That_ is where the pressure for expressivity comes in: speakers will try to avoid using such ambiguous forms, and therefore learners will be more likely to infer either a holistic or compositional language when receiving data from such a language of the 'other' type.\n",
     "\n",
-    "---> So I guess what I'm saying is that in our model, the pressure for communicative success should be extended somewhat, to not only consist of the (parameterised) assumption that speakers try to avoid ambiguity, but also the assumption that listeners try to arrive at a complete, unambiguous interpretation, rather than just settling for half a meaning or an ambiguous meaning.\n",
+    "---> So in our 'strong prediction' scenario, where we _replace_ Kirby et al.'s learnability pressure with a pressure for efficient repair, we'd expect that populations get pushed in the direction of languages of the 'other' type, as well as languages of the compositional type (not entirely sure which one would be best?) rather than languages of the degenerate type. Combining this pressure for efficient repair with Kirby et al.'s pressure for expressivity, will then get rid of the languages of the 'other' type.\n",
     "\n",
-    "---> Ultimately, \n"
+    "---> So I guess what I'm saying is that in our model, the pressure for communicative success should be extended somewhat, to not only consist of the (parameterised) assumption that speakers try to avoid ambiguity, but also the assumption that listeners try to arrive at a complete, unambiguous interpretation, rather than just settling for a (wholly or partly) ambiguous meaning.\n"
    ]
   },
   {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-12T14:09:51.234154Z",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-12T14:09:51.331184Z",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-12T14:09:51.541210Z",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-12T14:09:51.573083Z",
@@ -758,6 +758,13 @@
     "\n",
     "\n",
     "production(compositional_lang, \"02\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now let's implement noisy production:"
    ]
   },
   {
