added some thoughts on the production likelihoods of the noise variants

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -239,7 +239,9 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where *n* stands for the probability of noise."
+    "where *n* stands for the probability of noise.\n",
+    "\n",
+    "<span class=\"burk\">Actually, the probability for when f is _not_ mapped to t, _and_ f is a noisy variant, is not quite as simple as stated above.</span> Depending on how many forms f there are that _don't_ map to t, some of those error forms will generate the same noisy variant. For example, if the form that _is_ mapped to the intended topic is 'aa', and the forms ['ab', 'ba', 'bb'] form the set of forms that _aren't_ mapped to t, some noisy variants will only occur given one of these error forms being what the speaker produced ('a_' in this case), while others will occur given multiple possible error forms that the speaker might produce (e.g. '\\_b' can be a noisy variant of either 'ab' or 'bb'). The probabilities for the different noisy variants should reflect this. (I.e. in the example above, noisy variant '\\_b' should be twice as probable as noisy variant 'a_'.)"
    ]
   },
   {
