made assumption of pressure for communicative success a bit more specific

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**We hypothesise that** other-initiated repair and a compositional language co-evolve under the following assumptions:\n",
     "\n",
-    "1. There is a pressure for communicative success\n",
+    "1. There is a pressure for communicative success (or more specifically: that the listener makes an effort to find a complete meaning to interpret given the speaker's utterance)\n",
     "2. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) restricted request\n",
     "3. There is a pressure to make repair sequences as efficient as possible (in terms of combined utterance length of repair initiator and response)\n",
     "    \n",
